--- a/.github/workflows/team-sync.yml
+++ b/.github/workflows/team-sync.yml
@@ -21,6 +21,6 @@ jobs:
 
       - name: Test
         env:
-          COMMUNITY_GITHUB_OWNER: ${{ secrets.COMMUNITY_GITHUB_OWNER }}
+          COMMUNITY_GITHUB_OWNER: beyondstorage
           COMMUNITY_GITHUB_ACCESS_TOKEN: ${{ secrets.COMMUNITY_GITHUB_ACCESS_TOKEN }}
         run: go run github.com/beyondstorage/go-community/cmd/community team sync
