--- a/.github/workflows/team-sync.yml
+++ b/.github/workflows/team-sync.yml
@@ -19,8 +19,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Test
+      - name: Setup community tools
+        env:
+          COMMUNITY_VERSION: 0.1.0
+        run: curl -sSL https://github.com/beyondstorage/go-community/releases/download/${COMMUNITY_VERSION}/community_${COMMUNITY_VERSION}_linux_arm64.tar.gz -O community.tar.gz && tar -xvf community.tar.gz && ./community --help
+
+      - name: Sync Team
         env:
           COMMUNITY_GITHUB_OWNER: beyondstorage
           COMMUNITY_GITHUB_ACCESS_TOKEN: ${{ secrets.COMMUNITY_GITHUB_ACCESS_TOKEN }}
-        run: go run github.com/beyondstorage/go-community/cmd/community team sync
+        run: ./community team sync
