--- a/.github/workflows/team-sync.yml
+++ b/.github/workflows/team-sync.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Setup community tools
         env:
           COMMUNITY_VERSION: 0.1.0
-        run: curl -sSL https://github.com/beyondstorage/go-community/releases/download/${COMMUNITY_VERSION}/community_${COMMUNITY_VERSION}_linux_arm64.tar.gz -O community.tar.gz && tar -xvf community.tar.gz && ./community --help
+        run: curl -sSL "https://github.com/beyondstorage/go-community/releases/download/${COMMUNITY_VERSION}/community_${COMMUNITY_VERSION}_linux_arm64.tar.gz" -O community.tar.gz && tar -xvf community.tar.gz && ./community --help
 
       - name: Sync Team
         env:
