--- a/.github/workflows/team-sync.yml
+++ b/.github/workflows/team-sync.yml
@@ -26,4 +26,4 @@ jobs:
         env:
           COMMUNITY_GITHUB_OWNER: beyondstorage
           COMMUNITY_GITHUB_ACCESS_TOKEN: ${{ secrets.COMMUNITY_GITHUB_ACCESS_TOKEN }}
-        run: ./community team sync
+        run: ./community team sync --path teams.toml
