Nominate @xxchan as go-storage & specs maintainer
Signed-off-by: Xuanwo <github@xuanwo.io>

--- a/teams.toml
+++ b/teams.toml
@@ -6,6 +6,9 @@ repos = [
 leader = [
     "Xuanwo"
 ]
+maintainer = [
+    "xxchan"
+]
 
 [community]
 repos = [
@@ -66,4 +69,7 @@ repos = [
 [go-storage.members]
 leader = [
     "Xuanwo"
+]
+maintainer = [
+    "xxchan"
 ]
