Nominate community's committers
Signed-off-by: Xuanwo <github@xuanwo.io>

--- a/teams.toml
+++ b/teams.toml
@@ -20,6 +20,12 @@ repos = [
 leader = [
     "Xuanwo"
 ]
+committer = [
+    "xxchan",
+    "Prnyself",
+    "JinnyYi",
+    "aprilyang"
+]
 
 [dm]
 repos = [
