Nominate @zhangdichn as dm committer
Signed-off-by: Xuanwo <github@xuanwo.io>

--- a/teams.toml
+++ b/teams.toml
@@ -42,6 +42,12 @@ leader = [
 maintainer = [
     "Prnyself"
 ]
+committer = [
+    "aprilyang"
+]
+reviewer = [
+    "zhangdichn"
+]
 
 [go-storage]
 repos = [
