--- a/teams.toml
+++ b/teams.toml
@@ -29,6 +29,9 @@ committer = [
     "JinnyYi",
     "aprilyang"
 ]
+reviewer = [
+    "queenaray928"
+]
 contributor = [
     "bokket",
     "OAkaLala"
