Nominate @zhangdichn as community committer

--- a/teams.toml
+++ b/teams.toml
@@ -12,7 +12,8 @@ committer = [
     "xxchan",
     "Prnyself",
     "JinnyYi",
-    "aprilyang"
+    "aprilyang",
+    "zhangdichn"
 ]
 reviewer = [
     "queenaray928"
