--- a/.github/workflows/team-sync.yml
+++ b/.github/workflows/team-sync.yml
@@ -1,6 +1,10 @@
 name: "Team Sync"
 
-on: [ push, pull_request ]
+on:
+  push:
+  pull_request:
+  schedule: 
+    - cron: "0 0 * * *"
 
 jobs:
   team_sync:
