--- a/.github/workflows/team-sync.yml
+++ b/.github/workflows/team-sync.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           repository: beyondstorage/go-community
           path: go-community
-          ref: v0.3.2
+          ref: v0.4.0
 
       - name: Build community tools
         working-directory: go-community
@@ -36,4 +36,4 @@ jobs:
         env:
           COMMUNITY_GITHUB_OWNER: beyondstorage
           COMMUNITY_GITHUB_ACCESS_TOKEN: ${{ secrets.COMMUNITY_GITHUB_ACCESS_TOKEN }}
-        run: ./go-community/bin/community team sync --teams teams.toml --projects projects.toml
+        run: ./go-community/bin/community team sync --teams teams.toml --repos repos.toml
