proposal: Promote BeyondCTL as new Project
Signed-off-by: Xuanwo <github@xuanwo.io>

--- a/repos.toml
+++ b/repos.toml
@@ -44,7 +44,7 @@ required = ["auto-merge"]
 allowed = ["unit-test", "release"]
 
 [beyond-ctl]
-project = ["go-storage"]
+project = ["beyond-ctl"]
 [beyond-ctl.action]
 required = [
     "build-test",
